# ChangeLog for net-p2p/litecoind
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*litecoind-0.8.6.2 (14 Jan 2014)

  14 Jan 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.6.1.ebuild, +litecoind-0.8.6.2.ebuild:
  Version bump.

*litecoind-0.8.6.1 (23 Dec 2013)

  23 Dec 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.5.1.ebuild, +litecoind-0.8.6.1.ebuild:
  Version bump.

*litecoind-0.8.5.1 (28 Nov 2013)

  28 Nov 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.8.3.7.ebuild, +litecoind-0.8.5.1.ebuild:
  Version bump.

  16 Aug 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-0.8.3.7.ebuild:
  Fix dodoc, README has been renamed to README.md.

  16 Aug 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-9999.ebuild:
  Remove keywords from live ebuild.

*litecoind-0.8.3.7 (16 Aug 2013)

  16 Aug 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -litecoind-0.6.3c.ebuild, +litecoind-0.8.3.7.ebuild:
  Version bump.

*litecoind-9999 (03 May 2013)

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +litecoind-9999.ebuild:
  Add live ebuild.

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-0.6.3c.ebuild:
  Support building from git.

*litecoind-0.6.3c (03 May 2013)

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -files/0.4.2-Makefile.gentoo, -litecoind-0.6.3a.ebuild,
  +litecoind-0.6.3c.ebuild, files/litecoin.confd, files/litecoin.initd:
  Version bump + cleanup.

*litecoind-0.6.3a (08 Feb 2013)

  08 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +files/0.4.2-Makefile.gentoo, +litecoind-0.6.3a.ebuild, +files/litecoin.conf,
  +files/litecoin.confd, +files/litecoin.initd, +files/litecoind.logrotate,
  +metadata.xml:
  Initial import. Based on bitcoind-0.7.2.ebuild from the bitcoin overlay..
