@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Apr 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  litecoind-0.8.6.2.ebuild, litecoind-9999.ebuild:
+  Inherit user.
+
 *litecoind-0.8.6.2 (14 Jan 2014)
 
   14 Jan 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
